--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,9 @@ local.cfg
 /venv/
 .installed.txt
 
+## Added by .meta.toml
+# ignore docs build
+_build
 
 ##
 # Add extra configuration options in .meta.toml:
